IDE/ProjectWizard: Remember window layout
(cherry picked from commit b499737ba2cde9eeabd6a2b3934c509bd9e54bd5)

--- a/ide/projectwizarddlg.lfm
+++ b/ide/projectwizarddlg.lfm
@@ -10,6 +10,8 @@ object ProjectWizardDialog: TProjectWizardDialog
   ClientWidth = 572
   Position = poScreenCenter
   LCLVersion = '3.99.0.0'
+  OnClose = FormClose
+  OnCreate = FormCreate
   object btnNewProject: TBitBtn
     AnchorSideTop.Control = Owner
     AnchorSideRight.Side = asrBottom
