IDE: In options dialog, show [Ctrl+Enter] in OKButton's hint. Pure Enter affects the focused button, not always OKButton. Issue #40234.

--- a/ide/ideoptionsdlg.lfm
+++ b/ide/ideoptionsdlg.lfm
@@ -25,7 +25,7 @@ inherited IDEOptionsDialog: TIDEOptionsDialog
     BorderSpacing.Bottom = 6
     BorderSpacing.Around = 0
     OKButton.Name = 'OKButton'
-    OKButton.Hint = '[Enter, Ctrl+Enter]'
+    OKButton.Hint = '[Ctrl+Enter]'
     OKButton.DefaultCaption = True
     HelpButton.Name = 'HelpButton'
     HelpButton.Hint = '[F1]'
