IDE/Options: Hide the panel of conflict shortcuts if they are absent. Merge request !435.

--- a/ide/frames/editor_keymapping_options.lfm
+++ b/ide/frames/editor_keymapping_options.lfm
@@ -217,6 +217,7 @@ object EditorKeymappingOptionsFrame: TEditorKeymappingOptionsFrame
       Width = 459
       Align = alBottom
       ResizeAnchor = akBottom
+      Visible = False
       OnMoved = KeyMapSplitterMoved
     end
     object ConflictsTreeView: TTreeView
@@ -232,6 +233,7 @@ object EditorKeymappingOptionsFrame: TEditorKeymappingOptionsFrame
       RowSelect = True
       ScrollBars = ssAutoBoth
       TabOrder = 0
+      Visible = False
       Options = [tvoAutoItemHeight, tvoHideSelection, tvoKeepCollapsedNodes, tvoReadOnly, tvoRightClickSelect, tvoRowSelect, tvoShowButtons, tvoShowLines, tvoShowRoot, tvoToolTips, tvoThemedDraw]
       OnMouseDown = ConflictsTreeViewMouseDown
     end
