--- a/ide/frames/editor_wordwrap_options.lfm
+++ b/ide/frames/editor_wordwrap_options.lfm
@@ -3,11 +3,13 @@ object EditorWordWrapOptionsFrame: TEditorWordWrapOptionsFrame
   Height = 380
   Top = 0
   Width = 428
+  ChildSizing.Layout = cclLeftToRightThenTopToBottom
+  ChildSizing.ControlsPerLine = 2
   ClientHeight = 380
   ClientWidth = 428
   TabOrder = 0
-  DesignLeft = 534
-  DesignTop = 48
+  DesignLeft = 599
+  DesignTop = 61
   object cbEnableWordWrap: TCheckBox
     AnchorSideLeft.Control = Owner
     AnchorSideTop.Control = Owner
@@ -47,30 +49,188 @@ object EditorWordWrapOptionsFrame: TEditorWordWrapOptionsFrame
     Columns = 2
     TabOrder = 1
   end
-  object lbWinWordWrapWidth: TLabel
+  object Panel1: TPanel
     AnchorSideLeft.Control = Owner
-    AnchorSideTop.Control = edWinWordWrapWidth
-    AnchorSideTop.Side = asrCenter
+    AnchorSideTop.Control = Panel2
+    AnchorSideBottom.Control = Panel2
+    AnchorSideBottom.Side = asrBottom
     Left = 6
-    Height = 15
-    Top = 60
-    Width = 120
-    BorderSpacing.Around = 6
-    Caption = 'lbWinWordWrapWidth'
+    Height = 151
+    Top = 56
+    Width = 140
+    Anchors = [akTop, akLeft, akBottom]
+    AutoSize = True
+    BorderSpacing.Left = 6
+    BevelOuter = bvNone
+    ChildSizing.EnlargeVertical = crsSameSize
+    ChildSizing.ShrinkVertical = crsSameSize
+    ChildSizing.Layout = cclLeftToRightThenTopToBottom
+    ChildSizing.ControlsPerLine = 1
+    ClientHeight = 151
+    ClientWidth = 140
+    TabOrder = 2
+    object lbMinWordWrapWidth: TLabel
+      Left = 0
+      Height = 15
+      Top = 5
+      Width = 140
+      BorderSpacing.CellAlignVertical = ccaCenter
+      Caption = 'lbMinWordWrapWidth'
+    end
+    object lbWordWrapIndent: TLabel
+      Left = 0
+      Height = 15
+      Top = 30
+      Width = 140
+      BorderSpacing.CellAlignVertical = ccaCenter
+      Caption = 'lbWordWrapIndent'
+    end
+    object cbIndentIsOffset: TCheckBox
+      Left = 0
+      Height = 19
+      Top = 53
+      Width = 140
+      BorderSpacing.CellAlignVertical = ccaCenter
+      Caption = 'cbIndentIsOffset'
+      TabOrder = 0
+      OnChange = cbIndentIsOffsetChange
+    end
+    object lbWordWrapIndentMin: TLabel
+      Left = 0
+      Height = 15
+      Top = 81
+      Width = 140
+      BorderSpacing.CellAlignVertical = ccaCenter
+      Caption = 'lbWordWrapIndentMin'
+    end
+    object lbWordWrapIndentMax: TLabel
+      Left = 0
+      Height = 15
+      Top = 106
+      Width = 140
+      BorderSpacing.CellAlignVertical = ccaCenter
+      Caption = 'lbWordWrapIndentMax'
+    end
+    object lbWordWrapIndentMaxRel: TLabel
+      Left = 0
+      Height = 15
+      Top = 131
+      Width = 140
+      BorderSpacing.CellAlignVertical = ccaCenter
+      Caption = 'lbWordWrapIndentMaxRel'
+    end
   end
-  object edWinWordWrapWidth: TSpinEdit
-    AnchorSideLeft.Control = lbWinWordWrapWidth
+  object Panel2: TPanel
+    AnchorSideLeft.Control = Panel1
     AnchorSideLeft.Side = asrBottom
     AnchorSideTop.Control = rgCaretWrapPos
     AnchorSideTop.Side = asrBottom
-    Left = 132
-    Height = 23
+    Left = 152
+    Height = 151
     Top = 56
-    Width = 124
-    BorderSpacing.Around = 6
-    MaxValue = 9999
-    MinValue = 1
-    TabOrder = 2
-    Value = 10
+    Width = 60
+    AutoSize = True
+    BorderSpacing.Left = 6
+    BevelOuter = bvNone
+    ClientHeight = 151
+    ClientWidth = 60
+    TabOrder = 3
+    object edMinWordWrapWidth: TSpinEdit
+      AnchorSideTop.Control = Panel2
+      AnchorSideRight.Side = asrBottom
+      Left = 0
+      Height = 23
+      Top = 3
+      Width = 60
+      Alignment = taRightJustify
+      BorderSpacing.Top = 3
+      BorderSpacing.Bottom = 3
+      Constraints.MaxWidth = 60
+      Constraints.MinWidth = 60
+      MaxValue = 9999
+      MinValue = 1
+      TabOrder = 0
+      Value = 10
+    end
+    object edWordWrapIndent: TSpinEdit
+      AnchorSideTop.Control = edMinWordWrapWidth
+      AnchorSideTop.Side = asrBottom
+      AnchorSideRight.Side = asrBottom
+      Left = 0
+      Height = 23
+      Top = 29
+      Width = 60
+      Alignment = taRightJustify
+      BorderSpacing.Top = 3
+      BorderSpacing.Bottom = 3
+      Constraints.MaxWidth = 60
+      Constraints.MinWidth = 60
+      MaxValue = 100
+      MinValue = -100
+      TabOrder = 1
+      Value = 10
+    end
+    object Label1: TLabel
+      AnchorSideTop.Control = edWordWrapIndent
+      AnchorSideTop.Side = asrBottom
+      Left = 0
+      Height = 15
+      Top = 55
+      Width = 3
+      BorderSpacing.Top = 3
+      BorderSpacing.Bottom = 3
+      Caption = ' '
+    end
+    object edWordWrapIndentMin: TSpinEdit
+      AnchorSideTop.Control = Label1
+      AnchorSideTop.Side = asrBottom
+      AnchorSideRight.Side = asrBottom
+      Left = 0
+      Height = 23
+      Top = 73
+      Width = 60
+      Alignment = taRightJustify
+      BorderSpacing.Top = 3
+      BorderSpacing.Bottom = 3
+      Constraints.MaxWidth = 60
+      Constraints.MinWidth = 60
+      MaxValue = 100
+      TabOrder = 2
+      Value = 10
+    end
+    object edWordWrapIndentMax: TSpinEdit
+      AnchorSideTop.Control = edWordWrapIndentMin
+      AnchorSideTop.Side = asrBottom
+      AnchorSideRight.Side = asrBottom
+      Left = 0
+      Height = 23
+      Top = 99
+      Width = 60
+      Alignment = taRightJustify
+      BorderSpacing.Top = 3
+      BorderSpacing.Bottom = 3
+      Constraints.MaxWidth = 60
+      Constraints.MinWidth = 60
+      MaxValue = 100
+      TabOrder = 3
+      Value = 10
+    end
+    object edWordWrapIndentMaxRel: TSpinEdit
+      AnchorSideTop.Control = edWordWrapIndentMax
+      AnchorSideTop.Side = asrBottom
+      AnchorSideRight.Side = asrBottom
+      Left = 0
+      Height = 23
+      Top = 125
+      Width = 60
+      Alignment = taRightJustify
+      BorderSpacing.Top = 3
+      BorderSpacing.Bottom = 3
+      Constraints.MaxWidth = 60
+      Constraints.MinWidth = 60
+      MaxValue = 100
+      TabOrder = 4
+      Value = 10
+    end
   end
 end
