--- a/ide/frames/editor_wordwrap_options.lfm
+++ b/ide/frames/editor_wordwrap_options.lfm
@@ -49,6 +49,37 @@ object EditorWordWrapOptionsFrame: TEditorWordWrapOptionsFrame
     Columns = 2
     TabOrder = 1
   end
+  object cbHomeEndKey: TCheckBox
+    AnchorSideLeft.Control = Owner
+    AnchorSideTop.Control = rgCaretWrapPos
+    AnchorSideTop.Side = asrBottom
+    AnchorSideRight.Control = Owner
+    AnchorSideRight.Side = asrBottom
+    Left = 6
+    Height = 19
+    Top = 56
+    Width = 416
+    Anchors = [akTop, akLeft, akRight]
+    BorderSpacing.Around = 6
+    Caption = 'cbHomeEndKey'
+    TabOrder = 4
+  end
+  object DividerBevel1: TDividerBevel
+    AnchorSideLeft.Control = Owner
+    AnchorSideTop.Control = cbHomeEndKey
+    AnchorSideTop.Side = asrBottom
+    AnchorSideRight.Control = Owner
+    AnchorSideRight.Side = asrBottom
+    Left = 6
+    Height = 15
+    Top = 81
+    Width = 416
+    Caption = 'DividerBevel1'
+    Anchors = [akTop, akLeft, akRight]
+    BorderSpacing.Around = 6
+    Font.Style = [fsBold]
+    ParentFont = False
+  end
   object Panel1: TPanel
     AnchorSideLeft.Control = Owner
     AnchorSideTop.Control = Panel2
@@ -56,7 +87,7 @@ object EditorWordWrapOptionsFrame: TEditorWordWrapOptionsFrame
     AnchorSideBottom.Side = asrBottom
     Left = 6
     Height = 151
-    Top = 56
+    Top = 102
     Width = 140
     Anchors = [akTop, akLeft, akBottom]
     AutoSize = True
@@ -123,11 +154,11 @@ object EditorWordWrapOptionsFrame: TEditorWordWrapOptionsFrame
   object Panel2: TPanel
     AnchorSideLeft.Control = Panel1
     AnchorSideLeft.Side = asrBottom
-    AnchorSideTop.Control = rgCaretWrapPos
+    AnchorSideTop.Control = DividerBevel1
     AnchorSideTop.Side = asrBottom
     Left = 152
     Height = 151
-    Top = 56
+    Top = 102
     Width = 60
     AutoSize = True
     BorderSpacing.Left = 6
