--- a/components/todolist/tododlg.lfm
+++ b/components/todolist/tododlg.lfm
@@ -1,12 +1,13 @@
 object TodoDialog: TTodoDialog
-  Left = 224
-  Height = 230
-  Top = 127
-  Width = 361
+  Left = 400
+  Height = 290
+  Top = 124
+  Width = 397
   ActiveControl = TodoMemo
   Caption = 'Insert Todo'
-  ClientHeight = 230
-  ClientWidth = 361
+  ClientHeight = 290
+  ClientWidth = 397
+  Constraints.MinHeight = 290
   Constraints.MinWidth = 360
   Position = poScreenCenter
   SessionProperties = 'chkAlternateTokens.Checked;rdoDone.Checked;rdoNote.Checked;rdoToDo.Checked;OwnerEdit.Text'
@@ -19,9 +20,9 @@ object TodoDialog: TTodoDialog
     AnchorSideLeft.Control = Owner
     AnchorSideTop.Control = Owner
     Left = 8
-    Height = 15
+    Height = 19
     Top = 4
-    Width = 24
+    Width = 29
     BorderSpacing.Left = 8
     BorderSpacing.Top = 4
     BorderSpacing.Bottom = 2
@@ -34,9 +35,9 @@ object TodoDialog: TTodoDialog
     AnchorSideTop.Side = asrBottom
     AnchorSideBottom.Control = PriorityEdit
     Left = 8
-    Height = 15
-    Top = 74
-    Width = 38
+    Height = 19
+    Top = 93
+    Width = 46
     Anchors = [akLeft, akBottom]
     BorderSpacing.Top = 4
     BorderSpacing.Bottom = 2
@@ -47,9 +48,9 @@ object TodoDialog: TTodoDialog
     AnchorSideLeft.Control = OwnerEdit
     AnchorSideBottom.Control = OwnerEdit
     Left = 74
-    Height = 15
-    Top = 74
-    Width = 35
+    Height = 19
+    Top = 91
+    Width = 43
     Anchors = [akLeft, akBottom]
     BorderSpacing.Top = 4
     BorderSpacing.Bottom = 2
@@ -59,10 +60,10 @@ object TodoDialog: TTodoDialog
   object CategoryLabel: TLabel
     AnchorSideLeft.Control = CategoryEdit
     AnchorSideBottom.Control = CategoryEdit
-    Left = 217
-    Height = 15
-    Top = 74
-    Width = 48
+    Left = 235
+    Height = 19
+    Top = 91
+    Width = 58
     Anchors = [akLeft, akBottom]
     BorderSpacing.Top = 4
     BorderSpacing.Bottom = 2
@@ -77,9 +78,9 @@ object TodoDialog: TTodoDialog
     AnchorSideRight.Side = asrBottom
     AnchorSideBottom.Control = PriorityLabel
     Left = 8
-    Height = 49
-    Top = 21
-    Width = 345
+    Height = 64
+    Top = 25
+    Width = 381
     Anchors = [akTop, akLeft, akRight, akBottom]
     ScrollBars = ssAutoBoth
     TabOrder = 0
@@ -91,9 +92,9 @@ object TodoDialog: TTodoDialog
     AnchorSideRight.Control = Bevel2
     AnchorSideBottom.Control = grpboxToDoType
     Left = 74
-    Height = 23
-    Top = 91
-    Width = 135
+    Height = 31
+    Top = 112
+    Width = 153
     Anchors = [akLeft, akRight, akBottom]
     BorderSpacing.Left = 8
     BorderSpacing.Bottom = 8
@@ -106,10 +107,10 @@ object TodoDialog: TTodoDialog
     AnchorSideRight.Control = Owner
     AnchorSideRight.Side = asrBottom
     AnchorSideBottom.Control = grpboxToDoType
-    Left = 217
-    Height = 23
-    Top = 91
-    Width = 136
+    Left = 235
+    Height = 31
+    Top = 112
+    Width = 154
     Anchors = [akLeft, akRight, akBottom]
     BorderSpacing.Right = 8
     BorderSpacing.Bottom = 8
@@ -118,9 +119,9 @@ object TodoDialog: TTodoDialog
   object BtnPanel: TButtonPanel
     AnchorSideTop.Side = asrBottom
     Left = 6
-    Height = 26
-    Top = 198
-    Width = 349
+    Height = 34
+    Top = 250
+    Width = 385
     OKButton.Name = 'OKButton'
     OKButton.DefaultCaption = True
     HelpButton.Name = 'HelpButton'
@@ -138,8 +139,8 @@ object TodoDialog: TTodoDialog
     AnchorSideTop.Side = asrBottom
     AnchorSideBottom.Control = grpboxToDoType
     Left = 8
-    Height = 23
-    Top = 91
+    Height = 29
+    Top = 114
     Width = 58
     Anchors = [akLeft, akBottom]
     BorderSpacing.Bottom = 8
@@ -148,64 +149,63 @@ object TodoDialog: TTodoDialog
   object grpboxToDoType: TGroupBox
     AnchorSideTop.Side = asrBottom
     Left = 8
-    Height = 45
-    Top = 122
-    Width = 345
+    Height = 66
+    Top = 151
+    Width = 381
     Align = alBottom
-    AutoSize = True
     BorderSpacing.Left = 8
     BorderSpacing.Right = 8
     Caption = 'ToDo type'
-    ClientHeight = 25
-    ClientWidth = 341
+    ClientHeight = 46
+    ClientWidth = 379
     TabOrder = 4
     object rdoToDo: TRadioButton
       Left = 6
-      Height = 19
+      Height = 21
       Top = 0
-      Width = 46
+      Width = 56
       BorderSpacing.Left = 6
       BorderSpacing.Bottom = 6
       Caption = 'ToDo'
       Checked = True
-      OnChange = rdoToDoTypeChange
       TabOrder = 0
       TabStop = True
+      OnChange = rdoToDoTypeChange
     end
     object rdoDone: TRadioButton
       Tag = 1
       AnchorSideLeft.Control = grpboxToDoType
       AnchorSideLeft.Side = asrCenter
-      Left = 149
-      Height = 19
+      Left = 162
+      Height = 21
       Top = 0
-      Width = 46
+      Width = 58
       Anchors = [akTop]
       Caption = 'Done'
-      OnChange = rdoToDoTypeChange
       TabOrder = 1
+      OnChange = rdoToDoTypeChange
     end
     object rdoNote: TRadioButton
       Tag = 2
       AnchorSideRight.Control = grpboxToDoType
       AnchorSideRight.Side = asrBottom
-      Left = 291
-      Height = 19
+      Left = 318
+      Height = 21
       Top = 0
-      Width = 44
+      Width = 55
       Anchors = [akTop, akRight]
       BorderSpacing.Right = 6
       Caption = 'Note'
-      OnChange = rdoToDoTypeChange
       TabOrder = 2
+      OnChange = rdoToDoTypeChange
     end
   end
   object chkAlternateTokens: TCheckBox
     AnchorSideTop.Side = asrBottom
     Left = 8
-    Height = 19
-    Top = 173
-    Width = 345
+    Height = 21
+    Top = 223
+    Width = 381
     Align = alBottom
     Anchors = [akLeft, akBottom]
     BorderSpacing.Left = 8
@@ -221,17 +221,17 @@ object TodoDialog: TTodoDialog
     AnchorSideRight.Side = asrBottom
     Left = 74
     Height = 21
-    Top = 107
-    Width = 279
+    Top = 167
+    Width = 315
     Anchors = [akLeft, akRight, akBottom]
     Shape = bsSpacer
   end
   object Bevel2: TBevel
     AnchorSideLeft.Control = Bevel1
     AnchorSideLeft.Side = asrCenter
-    Left = 209
+    Left = 227
     Height = 16
-    Top = 72
+    Top = 132
     Width = 8
     Anchors = [akLeft, akBottom]
     Shape = bsSpacer
